<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:columnCount="2"
        android:rowCount="4"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintVertical_weight="4"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:gravity="center_horizontal|fill"
            android:onClick="clickSound"
            android:singleLine="false"
            android:tag="doyouspeakenglish"
            android:text="Do You Speak English?"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:onClick="clickSound"
            android:background="@drawable/button"
            android:gravity="center_horizontal|fill"
            android:tag="goodevening"
            android:text="@string/goodevening"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn3"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:onClick="clickSound"
            android:background="@drawable/button"
            android:gravity="center_horizontal|fill"
            android:tag="hello"
            android:text="@string/hello"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn4"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:onClick="clickSound"
            android:background="@drawable/button"
            android:gravity="center_horizontal|fill"
            android:tag="howareyou"
            android:text="@string/howareyou"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn5"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:onClick="clickSound"
            android:background="@drawable/button"
            android:gravity="center_horizontal|fill"
            android:tag="ilivein"
            android:text="@string/ilivein"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn6"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:onClick="clickSound"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:gravity="center_horizontal|fill"
            android:tag="mynameis"
            android:text="@string/mynameis"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn7"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="clickSound"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:gravity="center_horizontal|fill"
            android:tag="please"
            android:text="@string/please"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn8"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:onClick="clickSound"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:gravity="center_horizontal|fill"
            android:tag="welcome"
            android:text="@string/welkome"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>